@@ -2,6 +2,7 @@
 
  - Fix for bug 33505: Prevent wrong changing date being applied to parent folder upon folder deletion 
  - Fix for bug 33447: Corrected the 'exclude context admin' condition in the search term passed down to the storage layer 
+ - Fix for bug 33576: Also consider contacts without e-mail address when auto-completing in the contacts find module 
 
 * 2014-07-11 - jan.bauerdick@open-xchange.com
 
